tests/analyzer/fail/duplicate-symbol-uniq-triv.api
// expected: 1007

type func1 = struct {a: u32 };
type func1 = u32;
